--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </body>
 <script>
     let condicaoDispositivo = false
-    $('#estado').css(vermelho)
+    $('#estado').css("background-color: green")
 </script>
 
 <style>
@@ -49,7 +49,7 @@
         margin: 20px 0px 0px 0px
     }
     #estado {
-        background-color: red;
+        background-color: green;
         display: flex;
         flex-direction: column;
         align-items: center;
