--- a/index.html
+++ b/index.html
@@ -1,62 +1,164 @@
 <html>
 
-    <head>
-
-    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=yes">
-
+<head>
+    <meta name="viewport"
+        content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=yes">
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-
-    <!-- Resources for AWS IoT -->
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/components/core-min.js" type="text/javascript"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/components/hmac-min.js" type="text/javascript"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/components/sha256-min.js" type="text/javascript"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script>
-    <script src="main.bundle.js"></script>
-    <style>
-
-        body {padding: 0; margin: 0;}
-
-        #transportId {z-index: 99;position: absolute; top: 10px;left:10px;}
-
-        #mapContainer {width: 100vw; height: 100vh; display:none;}
-
-    </style>
+    <script src="main.bundle.js">
+        
+    </script>
     <title>Lampada</title>
 </head>
 
 <body>
-        <div id="container">
-            <h1>Lampada</h1>
-            <div id="estado">Acesa/Apagada</div>
+    <div class="login-page">
+        <div class="form">
+            <form class="login-form">
+                <input type="text" id="userName" placeholder="username" />
+                <input type="password" id="password" placeholder="password" />
+                <button id="login">login</button>
+                <p class="message">Not registered? <a href="#">Create an account</a></p>
+            </form>
+            <form class="login-form">
+                <button id="subscribe">subscribe</button>
+            </form>
         </div>
+    </div>
 </body>
 <script>
-    let condicaoDispositivo = false
-    $('#estado').css("background-color: green")
+    $('#subscribe').click(e => {
+        e.preventDefault()
+        console.log("subscribe")
+        libary.subscribe();
+    });
+    $('#login').click(e => {
+        e.preventDefault()
+        console.log("login")
+        let user=$('#userName').val()
+        let password= $('#password').val()
+        libary.login(user,password);
+    });
 </script>
 
 <style>
-    .destaque {
-        background-color: green;
-        font-weight: bold;
+    @import url(https://fonts.googleapis.com/css?family=Roboto:300);
+
+    .login-page {
+        width: 360px;
+        padding: 8% 0 0;
+        margin: auto;
     }
 
-    #bt {
-        margin: 20px 0px 0px 0px
+    .form {
+        position: relative;
+        z-index: 1;
+        background: #FFFFFF;
+        max-width: 360px;
+        margin: 0 auto 100px;
+        padding: 45px;
+        text-align: center;
+        box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     }
-    #estado {
-        background-color: green;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        position: absolute;
-        margin-left: 30%;
-        margin-right: 30%;
-        border: 3px solid white;
+
+    .form input {
+        font-family: "Roboto", sans-serif;
+        outline: 0;
+        background: #f2f2f2;
+        width: 100%;
+        border: 0;
+        margin: 0 0 15px;
+        padding: 15px;
+        box-sizing: border-box;
+        font-size: 14px;
+    }
+
+    .form button {
+        font-family: "Roboto", sans-serif;
+        text-transform: uppercase;
+        outline: 0;
+        background: #4CAF50;
+        width: 100%;
+        border: 0;
+        padding: 15px;
+        color: #FFFFFF;
+        font-size: 14px;
+        -webkit-transition: all 0.3 ease;
+        transition: all 0.3 ease;
+        cursor: pointer;
+    }
+
+    .form button:hover,
+    .form button:active,
+    .form button:focus {
+        background: #43A047;
+    }
+
+    .form .message {
+        margin: 15px 0 0;
+        color: #b3b3b3;
+        font-size: 12px;
+    }
+
+    .form .message a {
+        color: #4CAF50;
+        text-decoration: none;
+    }
+
+    .form .register-form {
+        display: none;
+    }
+
+    .container {
+        position: relative;
+        z-index: 1;
+        max-width: 300px;
+        margin: 0 auto;
+    }
+
+    .container:before,
+    .container:after {
+        content: "";
+        display: block;
+        clear: both;
+    }
+
+    .container .info {
+        margin: 50px auto;
+        text-align: center;
+    }
+
+    .container .info h1 {
+        margin: 0 0 15px;
+        padding: 0;
+        font-size: 36px;
+        font-weight: 300;
+        color: #1a1a1a;
+    }
+
+    .container .info span {
+        color: #4d4d4d;
+        font-size: 12px;
+    }
+
+    .container .info span a {
+        color: #000000;
+        text-decoration: none;
+    }
+
+    .container .info span .fa {
+        color: #EF3B3A;
+    }
+
+    body {
+        background: #76b852;
+        /* fallback for old browsers */
+        background: -webkit-linear-gradient(right, #76b852, #8DC26F);
+        background: -moz-linear-gradient(right, #76b852, #8DC26F);
+        background: -o-linear-gradient(right, #76b852, #8DC26F);
+        background: linear-gradient(to left, #76b852, #8DC26F);
+        font-family: "Roboto", sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
     }
 </style>
 
