--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </form>
             <form class="login-form">
                 <button id="subscribe">subscribe</button>
+                <button id="publish">publish</button>
             </form>
         </div>
     </div>
@@ -30,6 +31,11 @@
         e.preventDefault()
         console.log("subscribe")
         libary.subscribe();
+    });
+    $('#publish').click(e => {
+        e.preventDefault()
+        console.log("publish")
+        libary.publish();
     });
     $('#login').click(e => {
         e.preventDefault()
