--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <br>
 
                 <button id="off">Off</button>
+                <br>
+                <br>
+                <button id="status">Status</button>
             </form>
         </div>
     </div>
@@ -57,6 +60,11 @@
         let user=$('#userName').val()
         let password= $('#password').val()
         libary.login(user,password);
+    });
+    $('#status').click(e => {
+        e.preventDefault()
+        console.log("on")
+        libary.statusLampada()
     });
 </script>
 
