--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     });
     $('#status').click(e => {
         e.preventDefault()
-        console.log("on")
+        console.log("status")
         libary.statusLampada()
     });
 </script>
