--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport"
         content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=yes">
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+    <link rel="stylesheet" href="assets/css/style.css">
     <script src="main.bundle.js">
         
     </script>
@@ -11,13 +12,22 @@
 </head>
 
 <body>
+
+    <div class="w3-sidebar w3-bar-block" style="width:25%">
+        <a href="#" class="w3-bar-item w3-button">Link 1</a>
+            <a href="#" class="w3-bar-item w3-button">Link 2</a>
+            <a href="#" class="w3-bar-item w3-button">Link 3</a>
+    </div>
+
     <div class="top-box">
-        <div class="img-box1" id="img-box1"></div>
+        <div class="img-box1"><img src="assets/images/Lamp1.jpg" alt="Lamp1"></div>
         <div class="title-box">Automação Residencial</div>
     </div>
     <div class="main-box">
         <div class="text-box">Dispositivo: Lâmpada</div>
-        <div class="img-box2"></div>
+        <div class="box-tarifa"><input class="input-box" type="text"></div>
+        <button type="submit" class="submit-btn">Enviar tarifa</button>
+        <div class="img-box2"><img src="assets/images/Lamp2.png" alt="Lamp2" width="320" height="320"></div>
         <div class="button-div">
             <button id="off" class="btn-off">Off</button>
             <button id="on" class="btn-on">On</button>
@@ -25,25 +35,89 @@
         
         <div class="div-box1">
             <div class="box-title">Temporizador</div>
-            <div class="logo"></div>
+            <div class="logo"><img src="assets/images/Clock.png" alt="Clock" width="80" height="45"></div>
             <div class="line"></div>
+            <div class="start-time">
+                <select class="selection-box">
+                    <option value="1">00:00</option>
+                    <option value="2">01:00</option>
+                    <option value="3">02:00</option>
+                    <option value="4">03:00</option>
+                    <option value="5">04:00</option>
+                    <option value="6">05:00</option>
+                    <option value="7">06:00</option>
+                    <option value="8">07:00</option>
+                    <option value="9">08:00</option>
+                    <option value="10">09:00</option>
+                    <option value="11">10:00</option>
+                    <option value="12">11:00</option>
+                    <option value="13">12:00</option>
+                    <option value="14">13:00</option>
+                    <option value="15">14:00</option>
+                    <option value="16">15:00</option>
+                    <option value="17">16:00</option>
+                    <option value="18">17:00</option>
+                    <option value="19">18:00</option>
+                    <option value="20">19:00</option>
+                    <option value="21">20:00</option>
+                    <option value="22">21:00</option>
+                    <option value="23">22:00</option>
+                    <option value="24">23:00</option>
+                  </select>
+            </div>
+            <div class="time-on">
+                <select class="selection-box">
+                    <option value="1">01:00</option>
+                    <option value="2">02:00</option>
+                    <option value="3">03:00</option>
+                    <option value="4">04:00</option>
+                    <option value="5">05:00</option>
+                    <option value="6">06:00</option>
+                    <option value="7">07:00</option>
+                    <option value="8">08:00</option>
+                    <option value="9">09:00</option>
+                    <option value="10">10:00</option>
+                    <option value="11">11:00</option>
+                    <option value="12">12:00</option>
+                    <option value="13">13:00</option>
+                    <option value="14">14:00</option>
+                    <option value="15">15:00</option>
+                    <option value="16">16:00</option>
+                    <option value="17">17:00</option>
+                    <option value="18">18:00</option>
+                    <option value="19">19:00</option>
+                    <option value="20">20:00</option>
+                    <option value="21">21:00</option>
+                    <option value="22">22:00</option>
+                    <option value="23">23:00</option>
+                    <option value="24">24:00</option>
+                  </select>
+            </div>
+            <button type="submit" class="box-btn">Programar timer</button>
         </div>
         <div class="div-box2">
             <div class="box-title">Histórico de consumo</div>
-            <div class="logo"></div>
+            <select class="month-box">
+                <option value="1">Janeiro</option>
+                <option value="2">Fevereiro</option>
+                <option value="3">Março</option>
+                <option value="4">Abril</option>
+                <option value="5">Maio</option>
+                <option value="6">Junho</option>
+                <option value="7">Julho</option>
+                <option value="8">Agosto</option>
+                <option value="9">Setembro</option>
+                <option value="10">Outubro</option>
+                <option value="11">Novembro</option>
+                <option value="12">Dezembro</option>
+              </select>
+            <div class="logo"><img src="assets/images/Gráfico.png" alt="Grafico" width="70" height="50"></div>
+            <button type="submit" class="box-btn">Histórico</button>
             <div class="line"></div>
-            <button id="status">Test</button>
         </div>
     </div>
-    <br>
-    <br>
-    <br>
 </body>
 <script>
-    $(".img-box1").append(`<img src= ${libary.lamp1} alt="Lamp1">`);
-    $(".img-box2").append(`<img src=${libary.lamp2} alt="Lamp2" width="320" height="320">`);
-    $(".div-box1 .logo").append(`<img src=${libary.clock} alt="Clock" width="50" height="45">`);
-    $(".div-box2 .logo").append(`<img src=${libary.grafico} alt="Grafico" width="70" height="50">`);
     $('#off').click(e => {
         e.preventDefault()
         console.log("of")
