--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
     </div>
     </div>
     <div class="main-box">
+        <div class="alert alert-success d-none" id="success-alert-receive">
+            <button type="button" class="close" data-dismiss="alert">x</button>
+         </div>
         <div class="text-box ml-3 mb-3">
             <h3>Dispositivo: Lâmpada</h3>
         </div>
